force-app/main/default/objects/custom_create188__c/custom_create188__c.object-meta.xml
<CustomObject>
    <label>Custom created object188</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects188</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>