force-app/main/default/objects/custom_create188__c/fields/custom_create_188field539__c.field-meta.xml
<CustomField>
    <fullName>custom_create_188field539__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 188field539</label>
    <type>Checkbox</type>
</CustomField>