force-app/main/default/objects/custom_create188__c/fields/custom_create_188field552__c.field-meta.xml
<CustomField>
    <fullName>custom_create_188field552__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 188field552</label>
    <type>Checkbox</type>
</CustomField>